New concept: trapdoors
Trapdoors are links within dropdown-menus that - in turn - are rendered
solely within #toolbox (so that they are hidden)

The sole purpose of a trapdoor is to initiate ajax requests, hiding/unhiding
of panels etc. without being visible itself

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -17,6 +17,8 @@
     = render :partial => 'menus/teacher/quiz_main', :locals => { :teacher => tchr, :server => srvr }
     = render :partial => 'menus/user/account'
 
+    = render :partial => 'menus/teacher/trapdoors' 
+
   -# #modals by itself is not hidden. But the modal partials within it are by themselves 
   #modals
     = render :partial => 'modals/user/account'
@@ -69,5 +71,6 @@
           #wide-X
           #wide-wait
             = render :partial => 'toolbox/wait'
+          #graph-paper
 
     = yield :toolbox
