--- a/app/views/teachers/_wsl.html.haml
+++ b/app/views/teachers/_wsl.html.haml
@@ -4,7 +4,13 @@
     = simple_link :for => "Quizzes", :href => '#pane-wsl-quiz', :id => 'tab-wsl-quizzes'
   %li
     = simple_link :for => "Worksheets", :href => '#pane-wsl', :id => 'tab-wsl'
+  %li
+    = simple_link :for => "Report Card", :href => '#pane-ws-performance', :id => 'tab-ws-performance'
+  %li
+    = simple_link :for => "By Student", :href => '#pane-perf-student', :id => 'tab-perf-student'
 
 .tab-content
   #pane-wsl-quiz.tab-pane
   #pane-wsl.tab-pane
+  #pane-ws-performance.tab-pane
+  #pane-perf-student.tab-pane
