[Teacher]: Added grading panel
For schools that choose to let their teachers do the grading and pay us
just for using the platform

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -61,6 +61,8 @@
             = render :partial => 'teachers/qzb', :locals => { :teacher => tchr }
           #left-3
             = render :partial => 'teachers/wsl'
+          #left-4
+            = render :partial => 'toolbox/grading-panel'
         #middle.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-X
