--- a/app/views/toolbox/_grading-panel.html.haml
+++ b/app/views/toolbox/_grading-panel.html.haml
@@ -10,20 +10,20 @@
     %ul.nav.nav-tabs.span4.nopurge-on-show
       %li
         = simple_link :for => "Honest effort - even if incomplete?", 
-        :id => "tab-honest", :href => "#pane-honest"
+        :id => "tab-honest", :href => "#pane-honest", :class => :writeonce
       %li
         = simple_link :for => "Cogent & Correct - even if incomplete?", 
-        :id => "tab-cogent", :href => "#pane-cogent"
+        :id => "tab-cogent", :href => "#pane-cogent", :class => :writeonce
       %li
         = simple_link :for => "Complete?", :id => "tab-complete",
-        :href => "#pane-complete"
+        :href => "#pane-complete", :class => :writeonce
       %li
         = simple_link :for => "Anything else?", :id => "tab-other",
-        :href => "#pane-other"
+        :href => "#pane-other", :class => :writeonce
 
     -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
     .tab-content.span7
-      #pane-honest.tab-pane.writeonce
-      #pane-cogent.tab-pane.writeonce
-      #pane-complete.tab-pane.writeonce
-      #pane-other.tab-pane.writeonce.multi-select
+      #pane-honest.tab-pane
+      #pane-cogent.tab-pane
+      #pane-complete.tab-pane
+      #pane-other.tab-pane.multi-select
