--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -14,7 +14,9 @@
   .row-fluid
     .span1
       .badge
-    .text
+    .span3
+      .badge.long-badge
+    .text.offset1
       .row-fluid
       = check_box_tag :tbd, :t, false, :class => :hide
     .subtext
