--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -122,6 +122,7 @@ $lightblue: lighten($deep-blue, 23%) ;
 .single-line {
   padding: {
     top: 5px ;
+    bottom: 2px ;
   } 
   font-size: 12px ; 
   cursor: pointer ; 
@@ -139,6 +140,11 @@ $lightblue: lighten($deep-blue, 23%) ;
   } 
   &.selected {
     > .dropdown { > a { color: white ; } }
+    .long-badge { 
+      border-radius: 4px ;
+      background-color: $orange ;
+      color: $background ; 
+    } 
   } 
 
   > .dropdown { 
@@ -164,10 +170,12 @@ $lightblue: lighten($deep-blue, 23%) ;
        width: 8px ; 
        height: 8px ;
      } 
-     &.long-badge {
-       margin-right: 2px ;
-       width: 100% ;
-     } 
+  } 
+
+  .long-badge { 
+    color: $lightgray ;
+    padding: 2px ;
+    text-align: center ;
   } 
 } 
 
