--- a/app/views/toolbox/_line.html.haml
+++ b/app/views/toolbox/_line.html.haml
@@ -14,8 +14,8 @@
   .row-fluid
     .span1
       .badge
-    .span3
-      .badge.long-badge
+    .span4
+      .long-badge
     .text.offset1
       .row-fluid
       = check_box_tag :tbd, :t, false, :class => :hide
