--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -2382,7 +2382,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("../images/bootstrap/glyphicons-halflings.png");
+  background-image: url("bootstrap/glyphicons-halflings.png");
   background-position: 14px 14px;
   background-repeat: no-repeat;
   margin-top: 1px;
@@ -2391,43 +2391,43 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
 /* White icons with optional class, or on hover/active states of certain elements */
 
 .icon-white {
-  background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+  background-image: url("bootstrap/glyphicons-halflings-white.png");
 }
 
 .nav-pills > .active > a > {
   [class^="icon-"], [class*=" icon-"] {
-    background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+    background-image: url("bootstrap/glyphicons-halflings-white.png");
   }
 }
 
 .nav-list > .active > a > {
   [class^="icon-"], [class*=" icon-"] {
-    background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+    background-image: url("bootstrap/glyphicons-halflings-white.png");
   }
 }
 
 .navbar-inverse .nav > .active > a > {
   [class^="icon-"], [class*=" icon-"] {
-    background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+    background-image: url("bootstrap/glyphicons-halflings-white.png");
   }
 }
 
 .dropdown-menu > {
   li > a:hover > {
     [class^="icon-"], [class*=" icon-"] {
-      background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+      background-image: url("bootstrap/glyphicons-halflings-white.png");
     }
   }
   .active > a > {
     [class^="icon-"], [class*=" icon-"] {
-      background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+      background-image: url("bootstrap/glyphicons-halflings-white.png");
     }
   }
 }
 
 .dropdown-submenu:hover > a > {
   [class^="icon-"], [class*=" icon-"] {
-    background-image: url("../images/bootstrap/glyphicons-halflings-white.png");
+    background-image: url("bootstrap/glyphicons-halflings-white.png");
   }
 }
 
