--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -16,6 +16,7 @@
     = render :partial => 'menus/teacher/per-ws'
     = render :partial => 'menus/teacher/quiz_main', :locals => { :teacher => tchr, :server => srvr }
     = render :partial => 'menus/user/account'
+    = render :partial => 'menus/teacher/workbench'
 
     = render :partial => 'menus/teacher/trapdoors' 
 
@@ -45,10 +46,9 @@
                 %li.dropdown
                   = simple_link :for => "Quizzes & Questions", :as => :dropdown, :id => 'm-teacher-quizzes'
                 %li.dropdown
-                  %a.dropdown-toggle{ :href => "#", "data-toggle" => :dropdown }
-                    Report Cards
-                    %b.caret
-                -# Central place for editing user login details 
+                  = simple_link :for => "Report Cards", :as => :dropdown, :id => 'm-report-cards'
+                %li.dropdown
+                  = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-teacher-workbench'
                 %li#cp-account-link.dropdown.pull-right
                   = simple_link :for => "Hello, #{tchr.first_name}", :as => :dropdown, :id => 'm-account'
       #desktop.row-fluid
@@ -62,7 +62,7 @@
           #left-3
             = render :partial => 'teachers/wsl'
           #left-4
-            = render :partial => 'toolbox/grading-panel'
+            = render :partial => 'toolbox/grd-abacus'
         #middle.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
           #middle-X
@@ -74,5 +74,7 @@
           #wide-wait
             = render :partial => 'toolbox/wait'
           #graph-paper
+          #wide-grd-canvas
+            = render :partial => 'toolbox/grd-canvas'
 
     = yield :toolbox
