Attach list of pending scans to the grading-toolbar itself

--- a/app/views/toolbox/_grd-toolbar.html.haml
+++ b/app/views/toolbox/_grd-toolbar.html.haml
@@ -1,5 +1,6 @@
 
-#grd-toolbar
+#grd-toolbar.span6.offset2
+  #pending-scans.hide
   .btn-toolbar
     .btn-group
       %button.btn.btn-inverse#btn-back
