Changed order of tag and main-text when listing pending quizzes

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -158,6 +158,7 @@ $lightblue: lighten($deep-blue, 23%) ;
   .subtext { 
     font-size: 10px ;
     color: $orange ;
+    text-transform: uppercase ;
   } 
 
   .badge { 
