A 1-item menu - with just the download link for solution PDF - added
The menu is shown for a worksheet listed in the grading panel

--- a/app/views/layouts/teachers.html.haml
+++ b/app/views/layouts/teachers.html.haml
@@ -17,6 +17,7 @@
     = render :partial => 'menus/teacher/quiz_main', :locals => { :teacher => tchr, :server => srvr }
     = render :partial => 'menus/user/account'
     = render :partial => 'menus/teacher/workbench'
+    = render :partial => 'menus/user/per-grd-ws'
 
     = render :partial => 'menus/teacher/trapdoors' 
 
