--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -19,13 +19,13 @@
 
     -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
     .tab-content.span7
-      #pane-honest.tab-pane.multi-select
+      #pane-honest.tab-pane
         - Requirement.where(:honest => true).order(:weight).each do |m|
           = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
-      #pane-cogent.tab-pane.multi-select
+      #pane-cogent.tab-pane
         - Requirement.where(:cogent => true).order(:weight).each do |m|
           = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
-      #pane-complete.tab-pane.multi-select
+      #pane-complete.tab-pane
         - Requirement.where(:complete => true).order(:weight).each do |m|
           = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
       #pane-other.tab-pane.multi-select
