grd-toolbar back to being fixed

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -253,7 +253,7 @@ button[data-toggle='button'] {
 }
 
 #grd-toolbar { 
-  // position: fixed ; 
+  position: fixed ; 
 
   > #grd-ticker {
     background: transparent ;
