--- a/app/assets/stylesheets/bootstrap.css.scss
+++ b/app/assets/stylesheets/bootstrap.css.scss
@@ -3238,7 +3238,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
       display: block;
       &:hover {
         text-decoration: none;
-        background-color: #eeeeee;
+        // background-color: #eeeeee;
       }
     }
     .pull-right {
