Minor changes to question texts

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -5,13 +5,13 @@
   .tabbable.tabs-left.no-remove
     %ul.nav.nav-tabs.span4.nopurge-on-show
       %li
-        = simple_link :for => "Honest effort - even if incomplete?", 
+        = simple_link :for => "An honest effort - even if incomplete?", 
         :id => "tab-honest", :href => "#pane-honest", :class => :writeonce
       %li
-        = simple_link :for => "Cogent & Correct - even if incomplete?", 
+        = simple_link :for => "Does it make sense?",
         :id => "tab-cogent", :href => "#pane-cogent", :class => :writeonce
       %li
-        = simple_link :for => "Complete?", :id => "tab-complete",
+        = simple_link :for => "Is it complete?", :id => "tab-complete",
         :href => "#pane-complete", :class => :writeonce
       %li
         = simple_link :for => "Anything else?", :id => "tab-other",
