--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -174,15 +174,21 @@ $lightblue: lighten($deep-blue, 23%) ;
 
   .badge { 
      padding: 0px ; 
+     padding-top: 2px ;
      text-align: center ;
-     height: 14px ;
-     width: 14px ;
+     height: 16px ;
+     width: 20px ;
      color: $gray ;
      border-radius: 4px ;
      &:empty {
        width: 8px ; 
        height: 8px ;
+       padding-top: 0px ;
      } 
+     font: {
+       size: 11px ;
+       weight: 300 ;
+     }
   } 
 
   .long-badge { 
@@ -309,8 +315,18 @@ button[data-toggle='button'] {
 
   .badge { 
     padding: 0px ; 
-    width: 8px ;
-    height: 8px ;
+    padding: {
+      bottom: 4px ;
+    } 
+    width: 15px ;
+    height: 12px ;
+    border-radius: 4px ;
+    text-align: center ;
+    font: {
+      size: 11px ;
+      weight: 300 ;
+    }
+    color: $gray ;
   } 
   &.selected { 
     .badge { 
