[grading]: First steps towards adding short-cut keys for selecting requirements

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -20,14 +20,14 @@
     -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
     .tab-content.span7
       #pane-honest.tab-pane
-        - Requirement.where(:honest => true).order(:weight).each do |m|
-          = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
+        - Requirement.where(:honest => true).order(:weight).each_with_index do |m, j|
+          = render :partial => 'toolbox/requirement', :locals => { :requirement => m, :j => j }
       #pane-cogent.tab-pane
-        - Requirement.where(:cogent => true).order(:weight).each do |m|
-          = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
+        - Requirement.where(:cogent => true).order(:weight).each_with_index do |m, j|
+          = render :partial => 'toolbox/requirement', :locals => { :requirement => m, :j => j }
       #pane-complete.tab-pane
-        - Requirement.where(:complete => true).order(:weight).each do |m|
-          = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
+        - Requirement.where(:complete => true).order(:weight).each_with_index do |m,j|
+          = render :partial => 'toolbox/requirement', :locals => { :requirement => m, :j => j }
       #pane-other.tab-pane.multi-select
-        - Requirement.where(:other => true).order(:weight).each do |m|
-          = render :partial => 'toolbox/requirement', :locals => { :requirement => m }
+        - Requirement.where(:other => true).order(:weight).each_with_index do |m, j|
+          = render :partial => 'toolbox/requirement', :locals => { :requirement => m, :j => j }
