--- a/app/views/toolbox/_requirement.html.haml
+++ b/app/views/toolbox/_requirement.html.haml
@@ -3,7 +3,7 @@
 
 .row-fluid.requirement
   .span3
-    .badge
+    .badge= "#{j + 1}"
     .bottomline= "#{requirement.bottomline}" 
   .span9
     .text= "#{requirement.text}"
