New-style feedback - using new grading panel - can now be submitted
Some bugs noticed. Fixes will follow

--- a/app/views/toolbox/_grd-abacus.html.haml
+++ b/app/views/toolbox/_grd-abacus.html.haml
@@ -1,5 +1,5 @@
 
-= simple_form_for :checked, :remote => true, 
+= simple_form_for :checked, :remote => true, :url => submit_fdb_path, 
   :html => { :id => 'form-feedback', :class => 'no-remove'} do |f|
 
   .tabbable.tabs-left.no-remove
