--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -329,7 +329,7 @@ button[data-toggle='button'] {
       size: 11px ;
       weight: 400 ;
     }
-    color: $lightgray ;
+    color: $gray ;
   } 
   &.selected { 
     .badge { 
