--- a/app/views/toolbox/_grd-pending.html.haml
+++ b/app/views/toolbox/_grd-pending.html.haml
@@ -5,10 +5,12 @@
   %li
     = simple_link :for => "Pages", :id => 'tab-grd-page', :href => "#pane-grd-page"
   %li
-    = simple_link :for => "Question", :id => 'tab-grd-panel', :href => "#pane-grd-panel"
+    = simple_link :for => "Grade", :id => 'tab-grd-panel', :href => "#pane-grd-panel"
 
 .tab-content
   #pane-grd-ws.tab-pane
   #pane-grd-page.tab-pane
   #pane-grd-panel.tab-pane.nopurge-on-show
+    .row-fluid.navbar.no-remove
+      %button#btn-toggle-answerkey.pull-right.btn.btn-primary.btn-large{ :type => :button, 'data-toggle' => :button }= "See Solution"
     = render :partial => 'toolbox/grd-abacus'
