:role => :menu mandatory on top-most <ul>

--- a/app/views/menus/user/_account.html.haml
+++ b/app/views/menus/user/_account.html.haml
@@ -1,5 +1,5 @@
 
-%ul#tasks-on-account.dropdown-menu
+%ul#tasks-on-account.dropdown-menu{ :role => :menu }
   %li
     = simple_link :for => "Logout", :id => 'lnk-logout', :href => logout_path
   %li
