:role => :menu mandatory on top level <ul>

--- a/app/views/menus/teacher/_quiz_main.html.haml
+++ b/app/views/menus/teacher/_quiz_main.html.haml
@@ -1,7 +1,7 @@
 
 -# teacher and server come from layout file
 
-%ul#teacher-quiz.dropdown-menu.pull-right
+%ul#teacher-quiz.dropdown-menu.pull-right{ :role => :menu }
   %li.nav-header= "quiz"
   %li
     = simple_link :for => "New Quiz", :id => "lnk-new-quiz"
