--- a/app/views/menus/teacher/_trapdoors.html.haml
+++ b/app/views/menus/teacher/_trapdoors.html.haml
@@ -1,4 +1,4 @@
 
-%ul.dropdown-menu
+%ul.dropdown-menu{ :role => :menu }
   %li
     = simple_link :for => 'show chart', :id => 'trapdoor-show-chart'
