Top-level navbar links are now of font-size 15px

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -20,6 +20,10 @@ $lightblue: lighten($deep-blue, 23%) ;
 } 
 
 .navbar-inner { 
+  > ul > li > a:not([id='m-account']) { font-size: 15px ; }
+} 
+
+.navbar-inner { 
   border-radius: 0px ;
   background-color: $gradians-blue ;
 }
