--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,4 +1,8 @@
 
+-# Customized markers 
+- admin = current_account.loggable
+- srvr = "#{Gutenberg['server']}"
+
 - content_for :toolbox do 
   #toolbox.hidden 
     = render :partial => 'boards/new'
@@ -31,11 +35,15 @@
     = render :partial => 'examiners/list'
     = render :partial => 'teachers/list'
   
-    = render :partial => 'toolbox/swiss_knife'
-    = render :partial => 'toolbox/document_preview'
-    = render :partial => 'toolbox/edit_account'
-    = render :partial => 'toolbox/grading_canvas'
+    = render :partial => 'toolbox/line'
+    = render :partial => 'toolbox/preview'
+    = render :partial => 'menus/user/account'
+    = render :partial => 'menus/admin/workbench'
+
   
+- content_for :modals do
+  = render :partial => 'modals/user/account'
+
 !!!5
 
 %html{html_attrs}
@@ -45,17 +53,40 @@
     = csrf_meta_tag
 
   %body 
-    - default_marker = "#{current_account.nil? ? :tbd : current_account.loggable_id}"
-    #visible-active-area
-      #control-panel.panel.horizontal{ :marker => default_marker } 
-        #main-links 
-          = render :partial => 'admin/control-panel'
-        -# Links required in the currently loaded context
-        #minor-links
-
-      #side-panel.panel.left.slim
-      #middle-panel.panel.slim.left
-      #right-panel.panel.slim.left
-      #wide-panel.panel.wide.left
-
+    .container-fluid 
+      #control-panel.g-panel.row-fluid{ :marker => "#{admin.id}" } 
+        .span12
+          .navbar.navbar-inverse
+            .navbar-inner
+              %a.brand.span4{ :href => "#"}= "Gradians.com"
+              %ul.nav.span8.pull-right
+                -# dropdown -> Quiz -> [ new, edit, save ]
+                %li.dropdown
+                  = simple_link :for => "Workbench", :as => :dropdown, :id => 'm-admin-wb'
+                %li#cp-account-link.dropdown.pull-right
+                  = simple_link :for => "Hello, #{admin.first_name}", :as => :dropdown, :id => 'm-account'
+      #desktop.row-fluid
+        #left.g-panel.span4
+          = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
+          #left-1
+          #left-X
+          #left-2
+          #left-3
+          #left-4
+            = render :partial => 'toolbox/grd-pending'
+        #middle.g-panel.span4
+          = render :partial => 'toolbox/paginator', :locals => { :id => 'middle-paginator', :url => '#' }
+          #middle-X
+        #right.g-panel.span4
+          = render :partial => 'toolbox/paginator', :locals => { :id => 'right-paginator', :url => '#' }
+          #right-X
+        #wide.g-panel.span8
+          #wide-X
+          #wide-wait
+            = render :partial => 'toolbox/wait'
+          #graph-paper
+          #wide-grd-canvas
+            = render :partial => 'toolbox/grd-toolbar'
+            %canvas#grading-canvas{ :width => 600, :height => 800 }
     = yield :toolbox
+    = yield :modals
