[Admin]: First few links of workbench dropdown defined

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -69,6 +69,7 @@
         #left.g-panel.span4
           = render :partial => 'toolbox/paginator', :locals => { :id => 'left-paginator', :url => '#' }
           #left-1
+            #schools.content.no-remove
           #left-X
           #left-2
           #left-3
