(half-done) - List / edit schools in Admin console ..
Adding / editing schools is not that important now.
Will come back to this after the following:
  1. tagging questions
  2. adding examiners
  3. receiving scans
  4. adding / editing courses

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -82,6 +82,8 @@
           = render :partial => 'toolbox/paginator', :locals => { :id => 'right-paginator', :url => '#' }
           #right-X
         #wide.g-panel.span8
+          #wide-1
+            = render :partial => 'admin/school-console'
           #wide-X
           #wide-wait
             = render :partial => 'toolbox/wait'
