[grading]: Moved annotation buttons to one side - left of the canvas

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -303,6 +303,11 @@ button[data-toggle='button'] {
     } 
   } 
 }
+
+#grd-toolbar-btns { 
+  position: fixed ;
+} 
+
 .btn-inverse.active { background-color: $deep-blue ; }
 
 #form-feedback { 
