--- a/app/views/toolbox/_grd-toolbar.html.haml
+++ b/app/views/toolbox/_grd-toolbar.html.haml
@@ -1,30 +1,7 @@
 
-#grd-toolbar.offset2
+#grd-toolbar
   #pending-scans.hide
-  #grd-ticker.input-prepend
+  #grd-ticker.input-prepend.offset4
     %span.add-on
     %span.add-on
     %input{ :type => :text, :maxlength => 40, :placeholder => "Write comment - then click on scan" }
-  .btn-toolbar
-    .btn-group
-      %button.btn.btn-inverse#btn-prev-scan{ :rel => :tooltip, :title => "Previous Scan" }
-        %i{ :class => 'icon-white icon-fast-backward' }
-      %button.btn.btn-inverse#btn-prev-ques{ :rel => :tooltip, :title => "Previous Question" }
-        %i{ :class => 'icon-white icon-backward' }
-      %button.btn.btn-inverse#btn-next-ques{ :rel => :tooltip, :title => "Next Question" }
-        %i{ :class => 'icon-white icon-forward' }
-      %button.btn.btn-inverse#btn-next-scan{ :rel => :tooltip, :title => "Next Scan" }
-        %i{ :class => 'icon-white icon-fast-forward' }
-    .btn-group{ 'data-toggle' => 'buttons-radio' }
-      %button.btn.btn-inverse#btn-ok{ :rel => :tooltip, :title => "Insert Tick(s)" }
-        %i{ :class => 'icon-white icon-ok ' }
-      %button.btn.btn-inverse#btn-cross{ :rel => :tooltip, :title => "Insert Cross(es)" }
-        %i{ :class => 'icon-white icon-remove' }
-      %button.btn.btn-inverse#btn-what{ :rel => :tooltip, :title => "Insert Exclamation Mark(s)" }
-        %i{ :class => 'icon-white icon-exclamation-sign' }
-      %button.btn.btn-inverse#btn-write{ :rel => :tooltip, :title => "Add a comment" }
-        %i{ :class => 'icon-white icon-text-width' } 
-    .btn-group
-      %button.btn.btn-inverse#btn-undo{ :rel => :tooltip, :title => "Undo Last" }
-        %i{ :class => 'icon-white icon-repeat' } 
-
